--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.0.11"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13"
   }
